<resources>
    <string name="app_name">GPA Calculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Bottom Menu Text -->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>

    <!-- Main Fragment Text -->
    <string name="label_department_name">Department Name:</string>
    <string name="label_GPA">GPA:</string>
    <string name="button_fast_calculate">Fast Calculate</string>

    <!-- Profile Fragment Text -->
    <string name="label_school_name">School Name:</string>
    <string name="label_faculty_name">Faculty Name:</string>
    <string name="label_department_name_profile">Department Name:</string>
    <string name="label_age">Age:</string>
    <string name="label_gender">Gender:</string>

    <!-- Login Fragment Text -->
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="button_forgot_password">Forgot Password?</string>
    <string name="text_sign_in">Sign In</string>
    <string name="button_login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="login_with">Login with</string>
    <string name="provider_google">Google</string>
    <string name="provider_facebook">Facebook</string>

    <!-- Register Fragment Text -->
    <string name="button_sign_in">Sign In</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="hint_fullname">Full Name</string>
    <string name="hint_email_register">Enter Your Email</string>
    <string name="hint_password_register">Password</string>
    <string name="hint_confirm_password_register">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>

    <!-- Add Department Fragment Text -->
    <string name="text_department_name">Department Name:</string>
    <string name="text_semester">Number of Semester:</string>
    <string name="text_grade_system">Grade System:</string>
    <string name="text_add_department">Add</string>


</resources>