<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.RegisterFragment">

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/login_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fullNameText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/hint_fullname"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColorHint="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileIcon" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/hint_email_register"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColorHint="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="@+id/fullNameText"
        app:layout_constraintStart_toStartOf="@+id/fullNameText"
        app:layout_constraintTop_toBottomOf="@+id/fullNameText" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/hint_password_register"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColorHint="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="@+id/emailText"
        app:layout_constraintStart_toStartOf="@+id/emailText"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <EditText
        android:id="@+id/confirmPasswordText"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_background"
        android:ems="10"
        android:hint="@string/hint_confirm_password_register"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColorHint="@color/secondary_color"
        app:layout_constraintEnd_toEndOf="@+id/passwordText"
        app:layout_constraintStart_toStartOf="@+id/passwordText"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/button_login"
        android:backgroundTint="@color/primary_color"
        android:text="@string/button_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/confirmPasswordText"
        app:layout_constraintStart_toStartOf="@+id/confirmPasswordText"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordText" />

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/haveAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/already_have_an_account"
            android:textColor="@color/secondary_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="3dp"
            android:text="@string/text_sign_up"
            android:textColor="@color/primary_color"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>