<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddDepartmentFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="350dp"
        android:layout_height="500dp"
        app:cardBackgroundColor="@color/primary_color"
        app:cardCornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/text_department_name"
                android:textColor="@color/secondary_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/secondary_color"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/secondary_color"
                android:textColorHint="@color/secondary_color"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/text_semester"
                android:textColor="@color/secondary_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:backgroundTint="@color/secondary_color"
                android:dropDownSelector="@color/secondary_color"
                android:entries="@array/semester_array"
                android:popupBackground="@color/secondary_color"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:text="@string/text_grade_system"
                android:textColor="@color/secondary_color"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:buttonTint="@color/secondary_color"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/secondary_color"
                    android:text="AA, BA, BB, CB, CC, DC, DD, FD, FF"
                    android:textColor="@color/secondary_color"
                    app:useMaterialThemeColors="false" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="AA, AB, BA, BB, BC, CB, CC, CD, DC, DD, FF"
                    android:textColor="@color/secondary_color" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A, A-, B+, B, B-, C+, C, C-, D+, D, D-, F"
                    android:textColor="@color/secondary_color" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="A1, A2, A3, B1, B2, B3, C1, C2, C3, D, F"
                    android:textColor="@color/secondary_color" />

            </RadioGroup>

            <Button
                android:id="@+id/fastCalculateButton"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:text="@string/text_add_department"
                android:textColor="@color/secondary_color"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="@+id/radioGroup"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup"
                app:rippleColor="@color/ic_launcher_background"
                app:strokeColor="@color/secondary_color"
                app:strokeWidth="2dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="Add Department"
        android:textColor="@color/primary_color"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView" />
</androidx.constraintlayout.widget.ConstraintLayout>